src/Main.css
html, body {
  max-width: 100%;
  overflow-x: hidden;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 0;
}

.main-section {
  margin-top: 20px;
  padding: 0 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.main-title {
  font-family: "Titillium Web", sans-serif;
  font-size: 42px;
  text-align: center;
  color: #000;
  padding-bottom: 5px;
}

.main-subtitle {
  margin-top: 5px;
  font-family: "Open Sans", sans-serif;
  text-align: center;
  font-size: 16px;
  color: #000;
}

#hero {
  width: 200px;
  margin-top: 50px;
  margin-bottom: 3px;
  filter: hue-rotate(-60deg);
}

/* Sections */
.section {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px 50px;
}

.section-title {
  font-family: "Titillium Web", sans-serif;
  text-align: center;
  font-size: 24px;
  color: #000;
  margin-bottom: 30px;
}

.section-text {
  font-size: 14px;
  font-family: "Open Sans", sans-serif;
  color: #000;
}

/* Skills Section */
.skills-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.skills {
  margin-right: 50px;
  width: 50%;
}

.skills h2,
.other-skills h2 {
  text-align: center;
  margin-bottom: 10px;
}

.skill {
  font-size: 25px;
}

.skill-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 20px;
}

.skill-section:last-child {
  margin-bottom: 0;
}

.skills-image {
  width: 25px;
}

.express-image {
  width: 75px;
}

/* Project Section */
.project-section {
  display: flex;
  flex-direction: column;
}

.project {
  margin-bottom: 20px;
}

.project:last-child {
  margin-bottom: 0;
}

.button-group {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

/* Contact */
form {
  width: 100%;
}

.form-section {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-bottom: 15px;
}

.form-section:last-child {
  margin-bottom: 0;
}

/* Backgrounds */
.primary-bg {
  background-color: #6187cc;
}

/* Bootstrap Customization */
.btn-primary {
  background-color: #6187cc;
  border: none;
}

.btn-primary:hover {
  border: none;
  background-color: #3e598b;
}

.card-title {
  font-family: "Titillium Web", sans-serif;
}

/* Typing Effect On Title */
@keyframes typing {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

/* The typewriter cursor effect */
@keyframes blink-caret {
  from,
  to {
    border-color: transparent;
  }
  50% {
    border-color: #6187cc;
  }
}

/* Media Queries */
@media screen and (min-width: 768px) {
  .container {
    min-width: 100%;
  }

  .main-section {
    padding: 50px 20px 0 20px;
  }

  .main-title {
    font-size: 72px;
    /* Typewriter Effect */
    overflow: hidden;
    border-right: 0.15em solid #6187cc;
    white-space: nowrap;
    margin: 0 auto;
    letter-spacing: 0.15em;
    animation: typing 1.5s steps(200, end), blink-caret 1s step-end infinite;
  }

  .main-subtitle {
    font-size: 20px;
  }

  #hero {
    width: 650px;
  }

  .section {
    padding: 100px 500px;
  }

  .section-title {
    font-size: 32px;
  }

  .section-text {
    font-size: 16px;
  }

  /* Skills Section */
  .skills {
    margin-right: 200px;
  }

  .skill {
    font-size: 50px;
  }

  .skills-image {
    width: 50px;
  }

  .express-image {
    width: 75px;
  }

  .lg-title {
    font-size: 32px;
  }

  /* Projects Section */
  .project-section {
    display: flex;
    flex-direction: row;
  }

  .project {
    margin-right: 20px;
  }

  .project:last-child {
    margin-right: 0;
  }
}

